syntax = "proto3";

package scene_hunter.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/yashikota/scene-hunter/server/gen/scene_hunter/v1;scene_hunterv1";

message Room {
  string id = 1 [(buf.validate.field).string.uuid = true];
  string room_code = 2 [(buf.validate.field).string = {pattern: "^[0-9]{6}$"}];
  string expired_at = 3;
  string created_at = 4;
  string updated_at = 5;
  string deleted_at = 6;
}

message CreateRoomRequest {}

message CreateRoomResponse {
  Room room = 1;
}

message GetRoomRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetRoomResponse {
  Room room = 1;
}

message UpdateRoomRequest {
  Room room = 1;
}

message UpdateRoomResponse {
  Room room = 1;
}

message DeleteRoomRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeleteRoomResponse {
  Room room = 1;
}

service RoomService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc GetRoom(GetRoomRequest) returns (GetRoomResponse);
  rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse);
  rpc DeleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse);
}
